--- a/package.json
+++ b/package.json
@@ -18,21 +18,19 @@
     "lint": "eslint --ext .ts,.tsx ."
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.32.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "electron-settings": "^4.0.4",
     "electron-squirrel-startup": "^1.0.0",
+    "electron-store": "^9.0.0",
     "lucide-react": "^0.376.0",
     "react": "^18.3.1",
-    "react-code-blocks": "^0.1.6",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.3",
-    "react-query": "^3.39.3",
     "react-router-dom": "^6.23.0",
     "react-use": "^17.5.0",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.0"
+    "vaul": "^0.9.0",
+    "yaml": "^2.4.2"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.4.0",
@@ -67,6 +65,7 @@
     "tailwindcss": "^3.4.3",
     "ts-node": "^10.9.2",
     "typescript": "~4.5.4",
-    "vite": "^5.2.10"
+    "vite": "^5.2.10",
+    "vite-plugin-commonjs-externals": "^0.1.4"
   }
 }
