Got it working with Odamex!

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"odamex":"C:\\Users\\antho\\AppData\\Local\\Programs\\Odamex\\odamex.exe","gzdoom":"C:\\Program Files (x86)\\GZDoom\\gzdoom.exe","pwads":"C:\\Users\\antho\\Doom\\wads\\pwads","iwads":"C:\\Users\\antho\\Doom\\wads\\iwads"}
+{"odamex":"C:\\Users\\Tony\\AppData\\Local\\Programs\\Odamex\\odamex.exe","gzdoom":"C:\\Users\\Tony\\AppData\\Local\\Programs\\gzdoom\\gzdoom.exe","pwads":"E:\\pwads","iwads":"E:\\iwads"}
