--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx ."
+    "lint": "eslint --ext .ts,.tsx .",
+    "format": "prettier \"app/**/*.{js,jsx,ts,tsx}\" --write"
   },
   "dependencies": {
     "class-variance-authority": "^0.7.0",
