Updated for the web

--- a/package.json
+++ b/package.json
@@ -1,61 +1,52 @@
 {
-  "name": "doom-roulette-desktop",
-  "productName": "doom-roulette-desktop",
+  "name": "doom-roulette-web",
+  "productName": "doom-roulette-web",
   "version": "1.0.0",
   "description": "Discover and play doom mods at random",
+  "type": "module",
   "keywords": [],
   "author": {
     "name": "Anthony W. Weed",
     "email": "devnoot@gmail.com"
   },
   "license": "MIT",
-  "main": ".vite/build/main.js",
   "scripts": {
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
-    "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx .",
-    "format": "prettier \"app/**/*.{js,jsx,ts,tsx}\" --write"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "format": "prettier \"app/**/*.{js,jsx,ts,tsx}\" --write",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "electron-squirrel-startup": "^1.0.0",
-    "extract-zip": "^2.0.1",
-    "lucide-react": "^0.376.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.51.3",
-    "react-router-dom": "^6.23.0",
-    "react-use": "^17.5.0",
-    "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.0",
-    "yaml": "^2.4.2"
-  },
-  "devDependencies": {
-    "@electron-forge/cli": "^7.4.0",
-    "@electron-forge/maker-deb": "^7.4.0",
-    "@electron-forge/maker-rpm": "^7.4.0",
-    "@electron-forge/maker-squirrel": "^7.4.0",
-    "@electron-forge/maker-zip": "^7.4.0",
-    "@electron-forge/plugin-auto-unpack-natives": "^7.4.0",
-    "@electron-forge/plugin-fuses": "^7.4.0",
-    "@electron-forge/plugin-vite": "^7.4.0",
-    "@electron/fuses": "^1.8.0",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clipboard": "^2.0.11",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.376.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.3",
+    "react-router-dom": "^6.23.0",
+    "react-syntax-highlighter": "^15.5.0",
+    "react-use": "^17.5.0",
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.0"
+  },
+  "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/react": "^18.3.1",
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18.3.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
-    "electron": "30.0.1",
     "eslint": "^8.57.0",
     "eslint-plugin-import": "^2.29.1",
     "postcss": "^8.4.38",
@@ -66,7 +57,6 @@
     "tailwindcss": "^3.4.3",
     "ts-node": "^10.9.2",
     "typescript": "~4.5.4",
-    "vite": "^5.2.10",
-    "vite-plugin-commonjs-externals": "^0.1.4"
+    "vite": "^5.2.10"
   }
 }
